[package]
name = "firebase_jwt"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
anyhow = "1.0.95"
reqwest = { version = "0.12.12", features = ["json", "multipart"] }
tokio = { version = "1.42.0", features = ["full"] }
jsonwebtoken = "9.3.0"

