[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
reqwest = { version = "0.12.12", features = ["json", "multipart"] }
tokio = { version = "1.42.0", features = ["full"] }
jsonwebtoken = "9.3.0"
async-trait = "0.1.83"
http = "1.2.0"
serde_json = "1.0.134"
tracing = "0.1.41"
axum = "0.7.9"
firebase_jwt = {path = "../"}
tower-http = { version = "0.6.2"  , features = ["trace"] }
tracing-subscriber = "0.3.19"
